src/rocksdb_c.nim


proc rocksdb_options_statistics_get_string*(opt: ptr rocksdb_options_t): cstring {.
    cdecl, importc: "rocksdb_options_statistics_get_string", dynlib: librocksdb.}
proc rocksdb_options_set_max_write_buffer_number*(a2: ptr rocksdb_options_t;
    a3: cint) {.cdecl, importc: "rocksdb_options_set_max_write_buffer_number",
              dynlib: librocksdb.}
proc rocksdb_options_set_min_write_buffer_number_to_merge*(
    a2: ptr rocksdb_options_t; a3: cint) {.cdecl, importc: "rocksdb_options_set_min_write_buffer_number_to_merge",
                                      dynlib: librocksdb.}
proc rocksdb_options_set_max_write_buffer_number_to_maintain*(
    a2: ptr rocksdb_options_t; a3: cint) {.cdecl, importc: "rocksdb_options_set_max_write_buffer_number_to_maintain",
                                      dynlib: librocksdb.}
proc rocksdb_options_set_max_background_compactions*(a2: ptr rocksdb_options_t;
    a3: cint) {.cdecl, importc: "rocksdb_options_set_max_background_compactions",
              dynlib: librocksdb.}
proc rocksdb_options_set_base_background_compactions*(a2: ptr rocksdb_options_t;
    a3: cint) {.cdecl, importc: "rocksdb_options_set_base_background_compactions",
              dynlib: librocksdb.}
proc rocksdb_options_set_max_background_flushes*(a2: ptr rocksdb_options_t; a3: cint) {.
    cdecl, importc: "rocksdb_options_set_max_background_flushes",
    dynlib: librocksdb.}
proc rocksdb_options_set_max_log_file_size*(a2: ptr rocksdb_options_t; a3: csize) {.
    cdecl, importc: "rocksdb_options_set_max_log_file_size", dynlib: librocksdb.}
proc rocksdb_options_set_log_file_time_to_roll*(a2: ptr rocksdb_options_t; a3: csize) {.
    cdecl, importc: "rocksdb_options_set_log_file_time_to_roll", dynlib: librocksdb.}
proc rocksdb_options_set_keep_log_file_num*(a2: ptr rocksdb_options_t; a3: csize) {.
    cdecl, importc: "rocksdb_options_set_keep_log_file_num", dynlib: librocksdb.}
proc rocksdb_options_set_recycle_log_file_num*(a2: ptr rocksdb_options_t; a3: csize) {.
    cdecl, importc: "rocksdb_options_set_recycle_log_file_num", dynlib: librocksdb.}
proc rocksdb_options_set_soft_rate_limit*(a2: ptr rocksdb_options_t; a3: cdouble) {.
    cdecl, importc: "rocksdb_options_set_soft_rate_limit", dynlib: librocksdb.}
proc rocksdb_options_set_hard_rate_limit*(a2: ptr rocksdb_options_t; a3: cdouble) {.
    cdecl, importc: "rocksdb_options_set_hard_rate_limit", dynlib: librocksdb.}
proc rocksdb_options_set_soft_pending_compaction_bytes_limit*(
    opt: ptr rocksdb_options_t; v: csize) {.cdecl, importc: "rocksdb_options_set_soft_pending_compaction_bytes_limit",
                                       dynlib: librocksdb.}
proc rocksdb_options_set_hard_pending_compaction_bytes_limit*(
    opt: ptr rocksdb_options_t; v: csize) {.cdecl, importc: "rocksdb_options_set_hard_pending_compaction_bytes_limit",
                                       dynlib: librocksdb.}
proc rocksdb_options_set_rate_limit_delay_max_milliseconds*(
    a2: ptr rocksdb_options_t; a3: cuint) {.cdecl, importc: "rocksdb_options_set_rate_limit_delay_max_milliseconds",
                                       dynlib: librocksdb.}
proc rocksdb_options_set_max_manifest_file_size*(a2: ptr rocksdb_options_t;
    a3: csize) {.cdecl, importc: "rocksdb_options_set_max_manifest_file_size",
               dynlib: librocksdb.}
proc rocksdb_options_set_table_cache_numshardbits*(a2: ptr rocksdb_options_t;
    a3: cint) {.cdecl, importc: "rocksdb_options_set_table_cache_numshardbits",
              dynlib: librocksdb.}
proc rocksdb_options_set_table_cache_remove_scan_count_limit*(
    a2: ptr rocksdb_options_t; a3: cint) {.cdecl, importc: "rocksdb_options_set_table_cache_remove_scan_count_limit",
                                      dynlib: librocksdb.}
proc rocksdb_options_set_arena_block_size*(a2: ptr rocksdb_options_t; a3: csize) {.
    cdecl, importc: "rocksdb_options_set_arena_block_size", dynlib: librocksdb.}
proc rocksdb_options_set_use_fsync*(a2: ptr rocksdb_options_t; a3: cint) {.cdecl,
    importc: "rocksdb_options_set_use_fsync", dynlib: librocksdb.}
proc rocksdb_options_set_db_log_dir*(a2: ptr rocksdb_options_t; a3: cstring) {.cdecl,
    importc: "rocksdb_options_set_db_log_dir", dynlib: librocksdb.}
proc rocksdb_options_set_wal_dir*(a2: ptr rocksdb_options_t; a3: cstring) {.cdecl,
    importc: "rocksdb_options_set_wal_dir", dynlib: librocksdb.}
proc rocksdb_options_set_WAL_ttl_seconds*(a2: ptr rocksdb_options_t; a3: uint64) {.
    cdecl, importc: "rocksdb_options_set_WAL_ttl_seconds", dynlib: librocksdb.}
proc rocksdb_options_set_WAL_size_limit_MB*(a2: ptr rocksdb_options_t; a3: uint64) {.
    cdecl, importc: "rocksdb_options_set_WAL_size_limit_MB", dynlib: librocksdb.}
proc rocksdb_options_set_manifest_preallocation_size*(a2: ptr rocksdb_options_t;
    a3: csize) {.cdecl, importc: "rocksdb_options_set_manifest_preallocation_size",
               dynlib: librocksdb.}
proc rocksdb_options_set_purge_redundant_kvs_while_flush*(
    a2: ptr rocksdb_options_t; a3: cuchar) {.cdecl, importc: "rocksdb_options_set_purge_redundant_kvs_while_flush",
                                        dynlib: librocksdb.}
proc rocksdb_options_set_allow_mmap_reads*(a2: ptr rocksdb_options_t; a3: cuchar) {.
    cdecl, importc: "rocksdb_options_set_allow_mmap_reads", dynlib: librocksdb.}
proc rocksdb_options_set_allow_mmap_writes*(a2: ptr rocksdb_options_t; a3: cuchar) {.
    cdecl, importc: "rocksdb_options_set_allow_mmap_writes", dynlib: librocksdb.}
proc rocksdb_options_set_use_direct_reads*(a2: ptr rocksdb_options_t; a3: cuchar) {.
    cdecl, importc: "rocksdb_options_set_use_direct_reads", dynlib: librocksdb.}
proc rocksdb_options_set_use_direct_io_for_flush_and_compaction*(
    a2: ptr rocksdb_options_t; a3: cuchar) {.cdecl, importc: "rocksdb_options_set_use_direct_io_for_flush_and_compaction",
                                        dynlib: librocksdb.}
proc rocksdb_options_set_is_fd_close_on_exec*(a2: ptr rocksdb_options_t; a3: cuchar) {.
    cdecl, importc: "rocksdb_options_set_is_fd_close_on_exec", dynlib: librocksdb.}
proc rocksdb_options_set_skip_log_error_on_recovery*(a2: ptr rocksdb_options_t;
    a3: cuchar) {.cdecl, importc: "rocksdb_options_set_skip_log_error_on_recovery",
                dynlib: librocksdb.}
proc rocksdb_options_set_stats_dump_period_sec*(a2: ptr rocksdb_options_t; a3: cuint) {.
    cdecl, importc: "rocksdb_options_set_stats_dump_period_sec", dynlib: librocksdb.}
proc rocksdb_options_set_advise_random_on_open*(a2: ptr rocksdb_options_t;
    a3: cuchar) {.cdecl, importc: "rocksdb_options_set_advise_random_on_open",
                dynlib: librocksdb.}
proc rocksdb_options_set_access_hint_on_compaction_start*(
    a2: ptr rocksdb_options_t; a3: cint) {.cdecl, importc: "rocksdb_options_set_access_hint_on_compaction_start",
                                      dynlib: librocksdb.}
proc rocksdb_options_set_use_adaptive_mutex*(a2: ptr rocksdb_options_t; a3: cuchar) {.
    cdecl, importc: "rocksdb_options_set_use_adaptive_mutex", dynlib: librocksdb.}
proc rocksdb_options_set_bytes_per_sync*(a2: ptr rocksdb_options_t; a3: uint64) {.
    cdecl, importc: "rocksdb_options_set_bytes_per_sync", dynlib: librocksdb.}
proc rocksdb_options_set_wal_bytes_per_sync*(a2: ptr rocksdb_options_t; a3: uint64) {.
    cdecl, importc: "rocksdb_options_set_wal_bytes_per_sync", dynlib: librocksdb.}
proc rocksdb_options_set_writable_file_max_buffer_size*(
    a2: ptr rocksdb_options_t; a3: uint64) {.cdecl, importc: "rocksdb_options_set_writable_file_max_buffer_size",
                                        dynlib: librocksdb.}
proc rocksdb_options_set_allow_concurrent_memtable_write*(
    a2: ptr rocksdb_options_t; a3: cuchar) {.cdecl, importc: "rocksdb_options_set_allow_concurrent_memtable_write",
                                        dynlib: librocksdb.}
proc rocksdb_options_set_enable_write_thread_adaptive_yield*(
    a2: ptr rocksdb_options_t; a3: cuchar) {.cdecl, importc: "rocksdb_options_set_enable_write_thread_adaptive_yield",
                                        dynlib: librocksdb.}
proc rocksdb_options_set_max_sequential_skip_in_iterations*(
    a2: ptr rocksdb_options_t; a3: uint64) {.cdecl, importc: "rocksdb_options_set_max_sequential_skip_in_iterations",
                                        dynlib: librocksdb.}
proc rocksdb_options_set_disable_auto_compactions*(a2: ptr rocksdb_options_t;
    a3: cint) {.cdecl, importc: "rocksdb_options_set_disable_auto_compactions",
              dynlib: librocksdb.}
proc rocksdb_options_set_optimize_filters_for_hits*(a2: ptr rocksdb_options_t;
    a3: cint) {.cdecl, importc: "rocksdb_options_set_optimize_filters_for_hits",
              dynlib: librocksdb.}
proc rocksdb_options_set_delete_obsolete_files_period_micros*(
    a2: ptr rocksdb_options_t; a3: uint64) {.cdecl, importc: "rocksdb_options_set_delete_obsolete_files_period_micros",
                                        dynlib: librocksdb.}
proc rocksdb_options_prepare_for_bulk_load*(a2: ptr rocksdb_options_t) {.cdecl,
    importc: "rocksdb_options_prepare_for_bulk_load", dynlib: librocksdb.}
proc rocksdb_options_set_memtable_vector_rep*(a2: ptr rocksdb_options_t) {.cdecl,
    importc: "rocksdb_options_set_memtable_vector_rep", dynlib: librocksdb.}
proc rocksdb_options_set_memtable_prefix_bloom_size_ratio*(
    a2: ptr rocksdb_options_t; a3: cdouble) {.cdecl,
    importc: "rocksdb_options_set_memtable_prefix_bloom_size_ratio",
    dynlib: librocksdb.}
proc rocksdb_options_set_max_compaction_bytes*(a2: ptr rocksdb_options_t; a3: uint64) {.
    cdecl, importc: "rocksdb_options_set_max_compaction_bytes", dynlib: librocksdb.}
proc rocksdb_options_set_hash_skip_list_rep*(a2: ptr rocksdb_options_t; a3: csize;
    a4: int32; a5: int32) {.cdecl, importc: "rocksdb_options_set_hash_skip_list_rep",
                        dynlib: librocksdb.}
proc rocksdb_options_set_hash_link_list_rep*(a2: ptr rocksdb_options_t; a3: csize) {.
    cdecl, importc: "rocksdb_options_set_hash_link_list_rep", dynlib: librocksdb.}
proc rocksdb_options_set_plain_table_factory*(a2: ptr rocksdb_options_t; a3: uint32;
    a4: cint; a5: cdouble; a6: csize) {.cdecl, importc: "rocksdb_options_set_plain_table_factory",
                                  dynlib: librocksdb.}
proc rocksdb_options_set_min_level_to_compress*(opt: ptr rocksdb_options_t;
    level: cint) {.cdecl, importc: "rocksdb_options_set_min_level_to_compress",
                 dynlib: librocksdb.}
proc rocksdb_options_set_memtable_huge_page_size*(a2: ptr rocksdb_options_t;
    a3: csize) {.cdecl, importc: "rocksdb_options_set_memtable_huge_page_size",
               dynlib: librocksdb.}
proc rocksdb_options_set_max_successive_merges*(a2: ptr rocksdb_options_t; a3: csize) {.
    cdecl, importc: "rocksdb_options_set_max_successive_merges", dynlib: librocksdb.}
proc rocksdb_options_set_bloom_locality*(a2: ptr rocksdb_options_t; a3: uint32) {.
    cdecl, importc: "rocksdb_options_set_bloom_locality", dynlib: librocksdb.}
proc rocksdb_options_set_inplace_update_support*(a2: ptr rocksdb_options_t;
    a3: cuchar) {.cdecl, importc: "rocksdb_options_set_inplace_update_support",
                dynlib: librocksdb.}
proc rocksdb_options_set_inplace_update_num_locks*(a2: ptr rocksdb_options_t;
    a3: csize) {.cdecl, importc: "rocksdb_options_set_inplace_update_num_locks",
               dynlib: librocksdb.}
proc rocksdb_options_set_report_bg_io_stats*(a2: ptr rocksdb_options_t; a3: cint) {.
    cdecl, importc: "rocksdb_options_set_report_bg_io_stats", dynlib: librocksdb.}
const
  rocksdb_tolerate_corrupted_tail_records_recovery* = 0
  rocksdb_absolute_consistency_recovery* = 1
  rocksdb_point_in_time_recovery* = 2
  rocksdb_skip_any_corrupted_records_recovery* = 3
